build tool update (because i don't know how to use it)

--- a/elfinder.html
+++ b/elfinder.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <title>Finder</title>
 
-    <link rel="stylesheet" type="text/css" href="css/jquery-ui.css">
+    <link rel="stylesheet" type="text/css" href="css/jquery-ui.min.css">
     <link rel="stylesheet" type="text/css" href="css/elfinder.min.css">
     <link rel="stylesheet" type="text/css" href="css/theme.css">
 
     <script src="js/libs/jquery.min.js"></script>
     <script src="js/libs/jquery-ui.min.js"></script>
-    <script src="js/elfinder.min.js"></script>
+    <script src="js/elfinder.full.js"></script>
     <script src="js/i18n/elfinder.zh_CN.js"></script>
     <script type="text/javascript" charset="utf-8">
         $(document).ready(function () {
