--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 url: 'php/connector.minimal.php',
                 lang: 'zh_CN',
                 resizable: false,
-                disabled: ['netmount','help','archive','extract','info','quicklook','rename','resize','getfile']
+                disabled: ['netmount','help','archive','extract','resize','getfile']
             });
         });
     </script>
